# SocialPsychologyArena

./: .gitignore  LICENSE  PLAN.md  QUICKSTART.md  README.md  config.yaml  conversation.csv  example.py  pyproject.toml  read_conversation.py  requirements.txt  test_vision.py
psy_lab/: __init__.py  cli.py  dsl_parser.py  orchestrator.py
psy_lab/dashboards/: app.py
psy_lab/metrics/: __init__.py  base.py  conformity.py  metric_engine.py  sentiment.py  toxicity.py
psy_lab/scenarios/: asch.yaml  asch_modified.yaml  asch_vision.yaml  group_decision.yaml  milgram.yaml  prison.yaml
psy_lab/utils/: __init__.py  image_generator.py  simple_image_generator.py
test_logs/Simple Test Experiment_20250802_173317/: metadata.json
tests/: __init__.py  test_dsl_parser.py
